# std-qwen3-asr

./: .gitignore  LICENSE  README.md  VERIFICATION.md  pyproject.toml
docs/: STANDARD_ASR_FINDINGS.md
examples/: stream_against_mock.py  stream_against_vllm.py
src/std_qwen3_asr/: __init__.py  _audio.py  _json.py  capabilities.py  config.py  engine.py  entrypoint.py  languages.py  params.py  properties.py  session.py
src/std_qwen3_asr/backends/: __init__.py  base.py  dashscope.py  vllm.py
tests/: __init__.py  conftest.py  fake_server.py  test_backends.py  test_compliance.py  test_engine_paths.py  test_integration_batch.py  test_integration_streaming.py  test_units.py
